Changes done in dcoker compose, python, css, instances list

--- a/courses-frontend/src/index.css
+++ b/courses-frontend/src/index.css
@@ -48,6 +48,7 @@ code {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  align-items: flex-start;
 }
 .field-sm {
   width: 50px;
